[package]
name = "rust-tritet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "0.22.0"
lapack = "0.19.0"
openblas-src = { git = "https://github.com/blas-lapack-rs/openblas-src" }
plotpy = "0.3.5"
tritet = "*"
