[package]
name = "rust-tritet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "0.22.0"
blas-src = { version = "0.9.0", feature = ["openblas"] }
lapack = "0.19.0"
plotpy = "0.3.5"
tritet = "*"
